<resources>
    <string name="app_name">Monitoring Urban Problems</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_problem">Карта проблем</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Профиль и настройки</string>
    <string name="title_activity_login">Войдите</string>
    <string name="activity_login">Логин</string>
    <string name="activity_login_password">Пароль</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_register">"Register"</string>
    <string name="already_reg">"Already registered?"</string>
    <string name="reg_title">"Registration"</string>
    <string name="title_home">Мои проблемы</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Profile</string>
    <string name="confirmPas">Confirm password</string>
    <string name="userName">Имя</string>
    <string name="userSurname">Фамилия</string>
</resources>
